# haystack

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  rustfmt.toml  setup.dev_container.sh
.github/: rust.yml  ubuntu.yml
.github/workflows/: client-dev.yml  lua-dev.yml  macos.yml  release.yml  rust.yml  ubuntu.yml  windows.yml
haystack-awk/: Cargo.toml
haystack-awk/src/lib/: mod.rs  parser.rs  token.rs
haystack-cli/: Cargo.toml
haystack-cli/src/: cli.yaml  main.rs
haystack-client/: Cargo.toml  README.md
haystack-client/src/: args.rs  lib.rs  main.rs  ops.rs
haystack-db/: Cargo.toml
haystack-db/src/: lib.rs
haystack-lua/: Cargo.toml  README.md
haystack-lua/examples/lua/: haystack_to_rec_ids.lua
haystack-lua/src/: lbool.rs  lcol.rs  lcoord.rs  ldate.rs  ldatetime.rs  ldict.rs  lgrid.rs  lib.rs  llist.rs  lmarker.rs  lna.rs  lnull.rs  lnumber.rs  lref.rs  lremove.rs  lstr.rs  lsymbol.rs  ltime.rs  luri.rs  lxstr.rs
haystack-lua/tests/lua/: test.lua
haystack-types/: Cargo.toml
haystack-types/examples/lua/: haystack_about.lua  haystack_to_rec_ids.lua  plot_history.lua
haystack-types/src/: cast.rs  common.rs  err.rs  h_bool.rs  h_coord.rs  h_date.rs  h_datetime.rs  h_dict.rs  h_list.rs  h_marker.rs  h_na.rs  h_null.rs  h_number.rs  h_ref.rs  h_remove.rs  h_str.rs  h_symbol.rs  h_time.rs  h_uri.rs  h_val.rs  h_xstr.rs  lib.rs
haystack-types/src/h_grid/: h_col.rs  h_row.rs  mod.rs
haystack-types/src/io/: mod.rs
haystack-types/src/io/write/: json.rs  mod.rs  trio.rs  zinc.rs
haystack-types/src/lua/: lany.rs  lbool.rs  lcol.rs  lcoord.rs  ldate.rs  ldatetime.rs  ldict.rs  lgrid.rs  llist.rs  lmarker.rs  lna.rs  lnull.rs  lnumber.rs  lref.rs  lremove.rs  lstr.rs  lsymbol.rs  ltime.rs  luri.rs  lxstr.rs  mod.rs
haystack-types/tests/lua/: test.lua
