[package]
name = "haystack-cli"
version = "0.1.0"
authors = ["Christopher Andronikos <naxos.holdings@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.4.0"
features = ["full"]

[dependencies]
futures = "0.3"
clap = {version = "2.33", features = ["yaml"]}
haystack-client = { path = "../haystack-client" }