[package]
name = "haystack-client"
version = "0.1.0"
authors = ["Christopher Andronikos <naxos.holdings@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies]
futures = "0.3"
scram = "0.6.0"

nom = "7"
url = "2.5"
base64 = "0.12.1"
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
rstest = "0.21.0"
lazy_static = "1.5.0"