[package]
name = "haystack-client"
version = "0.1.0"
authors = ["Christopher Andronikos <naxos.holdings@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "haystackclientlib"
path = "src/lib.rs"

[[bin]]
name = "haystack-client"
path = "src/main.rs"

[dependencies.tokio]
version = "1.44"
features = ["full"]

[dependencies]
futures = "0.3"
scram = "0.6.0"
saphyr = "0.0.4"

# scram = { version = "0.7", package = "scram-2"}
# [patch.crates-io]
# scram = { git = "https://github.com/edgedb/scram.git" }

nom = "7"
url = "2.5"
base64 = "0.12.1"
reqwest = { version = "0.12", features = ["blocking"] }
#clap = {version = "2.33", features = ["yaml"]}
clap = { version = "4.5", features = ["derive", "wrap_help", "cargo"]}
dirs = "5.0"
dialoguer = "0.11.0"
anyhow = "1.0"

[patch.crates-io]
scram = { git = "https://github.com/edgedb/scram.git" }

[dev-dependencies]
rstest = "0.25.0"
lazy_static = "1.5.0"