[package]
name = "haystack-client"
version = "0.1.3"
authors = ["Christopher Andronikos <me@candronikos.com>"]
edition = "2024"
license = "MIT"
homepage = "https://candronikos.com/projects/haystack-rust/"
repository = "https://github.com/candronikos/haystack"
description = "Client library and CLI tool for interacting with haystack servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "haystackclientlib"
path = "src/lib.rs"

[[bin]]
name = "haystack-client"
path = "src/main.rs"

[dependencies.tokio]
version = "1.44"
features = ["full"]

[dependencies]
haystack-types = { version = "0.1.1", path = "../haystack-types"}
is-terminal = "0.4.16"
futures = "0.3"
scram = "0.6.0"
saphyr = "0.0.4"
reedline-repl-rs = { version = "1.2.1", features = ["async", "shlex"] }

# scram = { version = "0.7", package = "scram-2"}
# [patch.crates-io]
# scram = { git = "https://github.com/edgedb/scram.git" }

nom = "7"
url = "2.5"
base64 = "0.12.1"
reqwest = { version = "0.12", features = ["blocking"] }
#clap = {version = "2.33", features = ["yaml"]}
clap = { version = "4.5", features = ["derive", "wrap_help", "cargo"]}
dirs = "6.0"
dialoguer = "0.11.0"
anyhow = "1.0"

[patch.crates-io]
scram = { git = "https://github.com/edgedb/scram.git" }

[dev-dependencies]
rstest = "0.25.0"