[package]
name = "haystack-db"
version = "0.1.0"
authors = ["Christopher Andronikos <naxos.holdings@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dependencies.sled]
version = "0.31.0"
default-features = true
# features = ["compression", "io_uring"]