[package]
name = "haystack-lua"
version = "0.1.0"
edition = "2024"
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "haystack_lua"

[features]
lua54        = ["mlua_54", "lua"]
lua53        = ["mlua_53", "lua"]
lua52        = ["mlua_52", "lua"]
lua51        = ["mlua_51", "lua"]
luajit       = ["mlua_jit", "lua"]
luajit52     = ["mlua_jit52", "lua"]
luau         = ["mlua_u", "lua"]
luau-jit     = ["mlua_ujit", "lua"]
luau-vector4 = ["mlua_uvector4", "lua"]
lua          = []

[dependencies]
haystack-types = { version = "0.1.1", path = "../haystack-types"}

mlua_54       = { version = "0.10.5", package = "mlua", features = ["lua54", "module", "async", "userdata-wrappers"], optional = true }
mlua_53       = { version = "0.10.5", package = "mlua", features = ["lua53", "module", "async", "userdata-wrappers"], optional = true }
mlua_52       = { version = "0.10.5", package = "mlua", features = ["lua52", "module", "async", "userdata-wrappers"], optional = true }
mlua_51       = { version = "0.10.5", package = "mlua", features = ["lua51", "module", "async", "userdata-wrappers"], optional = true }
mlua_jit      = { version = "0.10.5", package = "mlua", features = ["luajit", "module", "async", "userdata-wrappers"], optional = true }
mlua_jit52    = { version = "0.10.5", package = "mlua", features = ["luajit52", "module", "async", "userdata-wrappers"], optional = true }
mlua_u        = { version = "0.10.5", package = "mlua", features = ["luau", "module", "async", "userdata-wrappers"], optional = true }
mlua_ujit     = { version = "0.10.5", package = "mlua", features = ["luau-jit", "module", "async", "userdata-wrappers"], optional = true }
mlua_uvector4 = { version = "0.10.5", package = "mlua", features = ["luau-vector4", "module", "async", "userdata-wrappers"], optional = true }