[package]
name = "haystack-types"
version = "0.1.0"
authors = ["Christopher Andronikos <naxos.holdings@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5"
chrono = "0.4"
chrono-tz = "0.9"
nom = "7"
num = "0.4.3"