[package]
name = "haystack-types"
version = "0.1.1"
authors = ["Christopher Andronikos <me@candronikos.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/candronikos/haystack"
description = "Haystack types and traits for Rust."
keywords = ["haystack", "skyspark", "zinc", "trio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5"
chrono = "0.4"
chrono-tz = "0.9"
nom = "8.0.0"
num = "0.4.3"